# api/tables/routes.py
@@ -4,6 +4,7 @@ from sqlalchemy.orm import Session
 from db import schemas
 from db.db import get_db
 from .controllers import create_table, is_available, reserve_table, delete_table_by_id, get_table_by_id
+from api.orders.controllers import create_order_with_items
 from api.stores.controllers import get_store_details
 from db.schemas import User
 from etc.usrmng import fastapi_users
@@ -34,7 +35,8 @@ def delete_table_route(table_id: int, db: Session = Depends(get_db), user: User 
 
 
 @router.put('/{table_id}/reserve', response_model=schemas.Reservation, status_code=201)
-def reserve_table_route(table_id: int, reservation: schemas.ReservationCreate, db: Session = Depends(get_db), user: User = Depends(fastapi_users.get_current_user)):
-    if not is_available(db, table_id, reservation.start_time, reservation.end_time):
+def reserve_table_route(table_id: int, reservation_with_order: schemas.ReservationWithOrderItems, db: Session = Depends(get_db), user: User = Depends(fastapi_users.get_current_user)):
+    if not is_available(db, table_id, reservation_with_order.start_time, reservation_with_order.end_time):
         raise HTTPException(409, "Another reservation has a conflict with the requested time")
-    return reserve_table(db, table_id, str(user.id), reservation)
+    order_id, _ = create_order_with_items(db, str(user.id), get_table_by_id(db, table_id).store_id, reservation_with_order.order_items)
+    return reserve_table(db, table_id, str(user.id), reservation_with_order, order_id)
